# upcie

./: .clang-format  .clangd  .gitignore  LICENSE  Makefile  README.rst  meson.build  meson_options.txt
.github/workflows/: docs.yml  verify.yml
cijoe/: nvme_trace.events
cijoe/configs/: cijoe-config.toml  debian-trixie-iommu_disabled.toml  debian-trixie-iommu_enabled.toml  hw-example.toml  nvidia-ubuntu.toml  system_imaging.toml  ubuntu-2604-iommu_disabled.toml  ubuntu-2604-iommu_enabled.toml  wave.toml
cijoe/scripts/: git_sync.py  meson_build.py  meson_install.py  qemu_guest_start_nvme.py  source_from_tgz.py  stage_nosi_guest.py
cijoe/tasks/: cudamem_nvme.yaml  deploy.yaml  guest_setup.yaml  guest_test.yaml  hipmem_nvme.yaml  provision.yaml  test.yaml
cijoe/workflows/: guest_setup.yaml  guest_test.yaml  nvidia_prep.yaml  nvidia_setup.yaml
docs/: .gitignore  Doxyfile  Makefile  doxy.cfg
docs/source/: conf.py  index.rst
docs/src/: api.md  build-and-test.md  conf.py  index.md  libraries.md  overview.md  quickstart.md
docs/tooling/: README.md  pyproject.toml
docs/tooling/src/upcie_docs/: __init__.py  cli.py
example/: meson.build  nvme.h  nvme_command.h  nvme_controller.h  nvme_qid.h  nvme_qpair.h  nvme_queue.h  upcie_nvme_driver.c
include/: bits.h  hostmem.h  hostmem_dma.h  hostmem_heap.h  mmio.h  nvme.h  pci.h  vfioctl.h
include/upcie/: barriers.h  bitfield.h  bits.h  cudamem_config.h  cudamem_dma.h  cudamem_heap.h  cudamem_mapping.h  debug.h  dmabuf.h  hostmem.h  hostmem_config.h  hostmem_dma.h  hostmem_heap.h  hostmem_hugepage.h  hostmem_state.h  mmio.h  nvme.h  nvme_command.h  nvme_controller.h  nvme_queue.h  nvme_request.h  pci.h  upcie.h  upcie_cuda.h  vfioctl.h
include/upcie/nvme/: nvme_command.h  nvme_controller.h  nvme_controller_cuda.h  nvme_controller_vfio.h  nvme_mmio.h  nvme_qid.h  nvme_qpair.h  nvme_qpair_cuda.h  nvme_request.h  nvme_request_cuda.h
scripts/: devbind.py  meson.build
tests/: conftest.py  meson.build  nvme_cuda_kernels.cu  test_cuda_nvme_readwrite.c  test_cuda_nvme_readwrite.py  test_cudamem_dmabuf.c  test_cudamem_heap.c  test_cudamem_mapping.c  test_cudamem_mapping_nvme_readwrite.c  test_cudamem_nvme_readwrite.c  test_devbind.py  test_hipmem_nvme_readwrite.c  test_hipmem_producer.c  test_hostmem_dma.c  test_hostmem_dmabuf.c  test_hostmem_heap.c  test_hostmem_nvme_read_offset.c  test_hostmem_nvme_readwrite.c  test_hostmem_shared.c  test_nvme.py  test_nvme_init.c  test_pci.c  test_pci_bars.c  test_pci_scan.c  test_vfioctl.c
