[project]
name = "upcie-docs"
version = "0.1.0"
description = "Documentation build tooling for the uPCIe project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Simon A. F. Lund", email = "os@safl.dk" }]
license = "BSD-3-Clause"
dependencies = [
    "sphinx>=8",
    "myst-parser[linkify]>=4",
    "sphinx-copybutton>=0.5",
    "sphinx-autobuild>=2024.10",
    "furo>=2024.8",
    "breathe>=4.35",
]

[project.scripts]
upcie-docs-serve = "upcie_docs.cli:serve"
upcie-docs-build-html = "upcie_docs.cli:build_html"
upcie-docs-build-pdf = "upcie_docs.cli:build_pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/upcie_docs"]
